@@ -1,11 +1,7 @@
-/*
- * Copyright 2016 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.cucumber.platform.smartmetering.glue.steps.ws.smartmetering.smartmeteringconfiguration;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -18,7 +14,6 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.configuration.GetPushNotificationAlarmResponse;
 import org.opensmartgridplatform.cucumber.core.RetryableAssert;
 import org.opensmartgridplatform.cucumber.platform.PlatformDefaults;
@@ -98,9 +93,27 @@ public class ReceivedAlarmNotificationsSteps {
     }
   }
 
-  @Then("^the alarm should be pushed to the osgp_logging database device_log_item table$")
-  public void theAlarmShouldBePushedToTheOsgpLoggingDatabaseTable(
+  @When("^a forwarded mx382 alarm notification is received from a known device$")
+  public void aForwardedMx382AlarmNotificationIsReceivedFromAKnownDevice(
       final Map<String, String> settings) throws Throwable {
+    try {
+      final String deviceIdentification =
+          getString(
+              settings,
+              PlatformKeys.KEY_DEVICE_IDENTIFICATION,
+              PlatformDefaults.DEFAULT_DEVICE_IDENTIFICATION);
+      SimulatePushedAlarmsHooks.simulateForwardedMx382Alarm(
+          deviceIdentification,
+          this.serviceEndpoint.getAlarmNotificationsHost(),
+          this.serviceEndpoint.getAlarmNotificationsPort());
+    } catch (final Exception e) {
+      LOGGER.error("Error occured simulateForwardedMx382Alarm: ", e);
+    }
+  }
+
+  @Then("^^(\\d++) alarm should be pushed to the osgp_logging database device_log_item table$")
+  public void theAlarmShouldBePushedToTheOsgpLoggingDatabaseTable(
+      final int numberOfMatchingLogs, final Map<String, String> settings) throws Throwable {
 
     final String deviceIdentification =
         getString(
@@ -108,7 +121,6 @@ public class ReceivedAlarmNotificationsSteps {
             PlatformKeys.KEY_DEVICE_IDENTIFICATION,
             PlatformDefaults.DEFAULT_DEVICE_IDENTIFICATION);
 
-    final int numberOfMatchingLogs = 2;
     final Predicate<DeviceLogItem> filter =
         dli -> Pattern.matches(PATTERN, dli.getDecodedMessage());
 
@@ -119,7 +131,7 @@ public class ReceivedAlarmNotificationsSteps {
               this.deviceLogItemRepository.findByDeviceIdentification(
                   deviceIdentification, pageable);
           final List<DeviceLogItem> filteredDeviceLogItems =
-              deviceLogPage.getContent().stream().filter(filter).collect(Collectors.toList());
+              deviceLogPage.getContent().stream().filter(filter).toList();
 
           assertThat(filteredDeviceLogItems.size())
               .as(
