@@ -1,12 +1,7 @@
-/*
- * Copyright 2021 Alliander N.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.cucumber.platform.smartmetering.support.ws.smartmetering.configuration;
 
 import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getString;
@@ -14,7 +9,6 @@ import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getStri
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.configuration.GetKeysAsyncRequest;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.configuration.GetKeysRequest;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.configuration.GetKeysRequestData;
@@ -49,6 +43,6 @@ public class GetKeysRequestFactory {
       final Map<String, String> settings) {
     final List<String> secretTypesAsString =
         Arrays.asList(getString(settings, "SecretTypes").split(","));
-    return secretTypesAsString.stream().map(SecretType::valueOf).collect(Collectors.toList());
+    return secretTypesAsString.stream().map(SecretType::valueOf).toList();
   }
 }
