@@ -1,27 +1,21 @@
-/*
- * Copyright 2021 Alliander N.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.cucumber.platform.smartmetering.support.ws.smartmetering.management;
 
 import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getEnum;
 import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getInteger;
 import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getLong;
+import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getShort;
 import static org.opensmartgridplatform.cucumber.core.ReadSettingsHelper.getString;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.bundle.GetGsmDiagnosticResponse;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.management.AdjacentCellInfo;
-import org.opensmartgridplatform.adapter.ws.schema.smartmetering.management.BitErrorRate;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.management.CellInfo;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.management.CircuitSwitchedStatus;
 import org.opensmartgridplatform.adapter.ws.schema.smartmetering.management.ModemRegistrationStatus;
@@ -49,8 +43,7 @@ public class GetGsmDiagnosticResponseFactory {
     final Integer locationId = getInteger(requestParameters, "locationId");
     final SignalQuality signalQuality =
         getEnum(requestParameters, "signalQuality", SignalQuality.class);
-    final BitErrorRate bitErrorRate =
-        getEnum(requestParameters, "bitErrorRate", BitErrorRate.class);
+    final short bitErrorRate = getShort(requestParameters, "bitErrorRate");
     final Integer mobileCountryCode = getInteger(requestParameters, "mobileCountryCode");
     final Integer mobileNetworkCode = getInteger(requestParameters, "mobileNetworkCode");
     final Long channelNumber = getLong(requestParameters, "channelNumber");
@@ -79,7 +72,7 @@ public class GetGsmDiagnosticResponseFactory {
                       SignalQuality.fromValue(adjacentCellSignalQualities.get(i)));
                   return adjacentCellInfo;
                 })
-            .collect(Collectors.toList());
+            .toList();
 
     final GetGsmDiagnosticResponse getGsmDiagnosticResponse = new GetGsmDiagnosticResponse();
 
