@@ -1,16 +1,11 @@
-/*
- * Copyright 2019 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.domain.core.application.services;
 
-import java.util.Date;
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.adapter.domain.core.application.config.PersistenceDomainLoggingConfig;
 import org.opensmartgridplatform.logging.domain.entities.DeviceLogItem;
 import org.opensmartgridplatform.logging.domain.repositories.DeviceLogItemSlicingRepository;
@@ -35,7 +30,7 @@ public class TransactionalDeviceLogItemService {
 
   @Autowired private DeviceLogItemSlicingRepository deviceLogItemSlicingRepository;
 
-  public List<DeviceLogItem> findDeviceLogItemsBeforeDate(final Date date, final int pageSize) {
+  public List<DeviceLogItem> findDeviceLogItemsBeforeDate(final Instant date, final int pageSize) {
     final PageRequest pageRequest = PageRequest.of(0, pageSize, Sort.Direction.ASC, "id");
     final Slice<DeviceLogItem> slice =
         this.deviceLogItemSlicingRepository.findByModificationTimeBefore(date, pageRequest);
@@ -47,8 +42,7 @@ public class TransactionalDeviceLogItemService {
 
   public void deleteDeviceLogItems(final List<DeviceLogItem> deviceLogItems) {
     final int size = deviceLogItems.size();
-    final List<Long> ids =
-        deviceLogItems.stream().map(DeviceLogItem::getId).collect(Collectors.toList());
+    final List<Long> ids = deviceLogItems.stream().map(DeviceLogItem::getId).toList();
 
     final int listSize = ids.size();
 
