@@ -1,16 +1,11 @@
-/*
- * Copyright 2019 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.domain.core.application.services;
 
-import java.util.Date;
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.adapter.domain.core.application.config.PersistenceDomainCoreConfig;
 import org.opensmartgridplatform.domain.core.entities.Event;
 import org.opensmartgridplatform.domain.core.repositories.EventRepository;
@@ -34,7 +29,7 @@ public class TransactionalEventService {
 
   @Autowired private EventRepository eventRepository;
 
-  public List<Event> getEventsBeforeDate(final Date date, final int pageSize) {
+  public List<Event> getEventsBeforeDate(final Instant date, final int pageSize) {
     final PageRequest pageRequest = PageRequest.of(0, pageSize, Sort.Direction.ASC, "id");
     final Slice<Event> slice = this.eventRepository.findByDateTimeBefore(date, pageRequest);
     final List<Event> events = slice.getContent();
@@ -45,7 +40,7 @@ public class TransactionalEventService {
 
   public void deleteEvents(final List<Event> events) {
     final int size = events.size();
-    final List<Long> ids = events.stream().map(Event::getId).collect(Collectors.toList());
+    final List<Long> ids = events.stream().map(Event::getId).toList();
 
     final int listSize = ids.size();
 
