@@ -1,15 +1,10 @@
-/*
- * Copyright 2015 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.domain.smartmetering.application.mapping.customconverters;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import ma.glasnost.orika.MappingContext;
 import ma.glasnost.orika.converter.BidirectionalConverter;
 import ma.glasnost.orika.metadata.Type;
@@ -33,7 +28,7 @@ public class EventsConverter extends BidirectionalConverter<EventDto, Event> {
     final List<EventDetail> eventDetails =
         source.getEventDetails().stream()
             .map(sourceDetail -> new EventDetail(sourceDetail.getName(), sourceDetail.getValue()))
-            .collect(Collectors.toList());
+            .toList();
 
     return new Event(
         source.getTimestamp(),
