@@ -1,11 +1,7 @@
-/*
- * Copyright 2014-2016 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.domain.smartmetering.application.services;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -56,7 +52,7 @@ public class EventMessageDataContainerMappingTest {
   public void testWithFilledList() {
     // build test data
     final EventDto event =
-        new EventDto(new DateTime(), new Integer(1), new Integer(2), "STANDARD_EVENT_LOG");
+        new EventDto(new DateTime(), Integer.valueOf(1), Integer.valueOf(2), "STANDARD_EVENT_LOG");
     event.setEventTypeDto(EventTypeDto.POWER_FAILURE);
 
     final ArrayList<EventDto> events = new ArrayList<>();
