@@ -1,11 +1,7 @@
-/*
- * Copyright 2021 Alliander N.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.ws.smartmetering.application.mapping;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -15,7 +11,6 @@ import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.xml.datatype.XMLGregorianCalendar;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
@@ -163,6 +158,6 @@ public class ActualPowerQualityResponseMappingTest {
   }
 
   private List<PowerQualityValue> makePowerQualityValue(final Serializable... values) {
-    return Arrays.stream(values).map(PowerQualityValue::new).collect(Collectors.toList());
+    return Arrays.stream(values).map(PowerQualityValue::new).toList();
   }
 }
