@@ -1,13 +1,6 @@
-/*
- * Copyright 2022 Alliander N.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
 
 package org.opensmartgridplatform.dlms.objectconfig;
 
@@ -27,9 +20,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.opensmartgridplatform.dlms.exceptions.ObjectConfigException;
 import org.opensmartgridplatform.dlms.interfaceclass.InterfaceClass;
 import org.opensmartgridplatform.dlms.interfaceclass.attribute.RegisterAttribute;
+import org.opensmartgridplatform.dlms.services.ObjectConfigService;
 
 @Slf4j
 public class DlmsProfileValidator {
+  private static final String PQ_ERROR = " PQ validation error: ";
+  private static final String CAPTURE_OBJECTS_ERROR = " Capture objects validation error: ";
+  private static final String SOURCE_OBJECTS_ERROR = " Source objects validation error: ";
+
   private DlmsProfileValidator() {
     // Static class
   }
@@ -39,7 +37,7 @@ public class DlmsProfileValidator {
         dlmsProfiles.stream()
             .map(DlmsProfileValidator::validateProfile)
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
 
     if (!validationErrors.isEmpty()) {
       throw new ObjectConfigException(String.join("\n", validationErrors));
@@ -48,10 +46,15 @@ public class DlmsProfileValidator {
 
   private static List<String> validateProfile(final DlmsProfile dlmsProfile) {
     final List<String> validationErrors = new ArrayList<>();
+    dlmsProfile.createMap();
 
     try {
       allRegistersShouldHaveAUnit(dlmsProfile, validationErrors);
       allPQProfilesShouldHaveSelectableObjects(dlmsProfile, validationErrors);
+      allPqPeriodicShouldBeInAProfileSelectableObjects(dlmsProfile, validationErrors);
+      allPqRequestsShouldMatchType(dlmsProfile, validationErrors);
+      allCaptureObjectsShouldExist(dlmsProfile, validationErrors);
+      allSourceObjectsShouldExist(dlmsProfile, validationErrors);
 
       return validationErrors;
     } catch (final Exception e) {
@@ -63,13 +66,92 @@ public class DlmsProfileValidator {
     }
   }
 
+  private static void allPqRequestsShouldMatchType(
+      final DlmsProfile dlmsProfile, final List<String> validationErrors) {
+    final String validationError =
+        dlmsProfile.getObjects().stream()
+            .filter(DlmsProfileValidator::isPeriodicRequest)
+            .map(DlmsProfileValidator::pqRequestShouldMatchMeterType)
+            .filter(error -> !error.isEmpty())
+            .collect(Collectors.joining(", "));
+
+    if (!validationError.isEmpty()) {
+      validationErrors.add(createErrorMessage(dlmsProfile, PQ_ERROR, validationError));
+    }
+  }
+
+  private static void allPqPeriodicShouldBeInAProfileSelectableObjects(
+      final DlmsProfile dlmsProfile, final List<String> validationErrors) {
+    final String validationError =
+        dlmsProfile.getObjects().stream()
+            .filter(DlmsProfileValidator::isPeriodicRequest)
+            .map(object -> pqObjectShouldBeInAProfileSelectableObjects(object, dlmsProfile))
+            .filter(error -> !error.isEmpty())
+            .collect(Collectors.joining(", "));
+
+    if (!validationError.isEmpty()) {
+      validationErrors.add(createErrorMessage(dlmsProfile, PQ_ERROR, validationError));
+    }
+  }
+
+  private static boolean isPeriodicRequest(final CosemObject object) {
+    return object.getProperty(ObjectProperty.PQ_REQUEST) != null
+        && (object
+                .getListProperty(ObjectProperty.PQ_REQUEST)
+                .contains(PowerQualityRequest.PERIODIC_SP.name())
+            || object
+                .getListProperty(ObjectProperty.PQ_REQUEST)
+                .contains(PowerQualityRequest.PERIODIC_PP.name()));
+  }
+
+  private static String pqObjectShouldBeInAProfileSelectableObjects(
+      final CosemObject pqObject, final DlmsProfile dlmsProfile) {
+    final List<String> selectableObjects =
+        dlmsProfile.getObjects().stream()
+            .filter(
+                object ->
+                    Arrays.asList(
+                            DEFINABLE_LOAD_PROFILE.name(),
+                            POWER_QUALITY_PROFILE_1.name(),
+                            POWER_QUALITY_PROFILE_2.name())
+                        .contains(object.getTag()))
+            .flatMap(object -> object.getListProperty(ObjectProperty.SELECTABLE_OBJECTS).stream())
+            .toList();
+
+    if (!selectableObjects.contains(pqObject.getTag())) {
+      return pqObject.getTag() + " cannot be found in a selectable object list of a PQ Profile";
+    }
+    return "";
+  }
+
+  private static String pqRequestShouldMatchMeterType(final CosemObject pqObject) {
+    final List<String> pqRequests = pqObject.getListProperty(ObjectProperty.PQ_REQUEST);
+    if (pqRequests.contains(PowerQualityRequest.ACTUAL_SP.name())
+        && !pqObject.getMeterTypes().contains(MeterType.SP)) {
+      return pqObject.getTag() + " has request ACTUAL_SP, but meter type does not have SP";
+    }
+    if (pqRequests.contains(PowerQualityRequest.PERIODIC_SP.name())
+        && !pqObject.getMeterTypes().contains(MeterType.SP)) {
+      return pqObject.getTag() + " has request PERIODIC_SP, but meter type does not have SP";
+    }
+    if (pqRequests.contains(PowerQualityRequest.ACTUAL_PP.name())
+        && !pqObject.getMeterTypes().contains(MeterType.PP)) {
+      return pqObject.getTag() + " has request ACTUAL_PP, but meter type does not have PP";
+    }
+    if (pqRequests.contains(PowerQualityRequest.PERIODIC_PP.name())
+        && !pqObject.getMeterTypes().contains(MeterType.PP)) {
+      return pqObject.getTag() + " has request PERIODIC_PP, but meter type does not have PP";
+    }
+    return "";
+  }
+
   private static void allRegistersShouldHaveAUnit(
       final DlmsProfile dlmsProfile, final List<String> validationErrors) {
     final List<CosemObject> registersWithoutUnit =
         dlmsProfile.getObjects().stream()
             .filter(object -> object.getClassId() == InterfaceClass.REGISTER.id())
             .filter(object -> !registerHasScalerUnit(object))
-            .collect(Collectors.toList());
+            .toList();
 
     if (!registersWithoutUnit.isEmpty()) {
       final String tags =
@@ -102,12 +184,8 @@ public class DlmsProfileValidator {
             .filter(error -> !error.isEmpty())
             .collect(Collectors.joining(", "));
 
-    if (!validationError.equals("")) {
-      validationErrors.add(
-          "DlmsProfile "
-              + dlmsProfile.getProfileWithVersion()
-              + " PQ validation error: "
-              + validationError);
+    if (!validationError.isEmpty()) {
+      validationErrors.add(createErrorMessage(dlmsProfile, PQ_ERROR, validationError));
     }
   }
 
@@ -136,7 +214,7 @@ public class DlmsProfileValidator {
             .filter(object -> object.getTag().equals(tagForSelectableObject))
             .findFirst();
 
-    if (!optionalCosemObject.isPresent()) {
+    if (optionalCosemObject.isEmpty()) {
       return "Profile doesn't contain object for " + tagForSelectableObject;
     }
 
@@ -146,7 +224,59 @@ public class DlmsProfileValidator {
     if (pqProfile == null) {
       return tagForSelectableObject + " doesn't contain PQ Profile";
     }
+    final List<String> pqRequest = selectableObject.getListProperty(ObjectProperty.PQ_REQUEST);
+    if (pqRequest == null) {
+      return tagForSelectableObject + " doesn't contain PQ Request";
+    }
 
     return "";
+  }
+
+  private static void allCaptureObjectsShouldExist(
+      final DlmsProfile dlmsProfile, final List<String> validationErrors) {
+    final String validationError =
+        dlmsProfile.getObjects().stream()
+            .filter(object -> object.getClassId() == InterfaceClass.PROFILE_GENERIC.id())
+            .map(ObjectConfigService::getCaptureObjectDefinitions)
+            .flatMap(Collection::stream)
+            .map(ObjectConfigService::getCosemObjectTypeFromCaptureObjectDefinition)
+            .map(tag -> objectShouldExist(dlmsProfile, tag))
+            .filter(error -> !error.isEmpty())
+            .collect(Collectors.joining(", "));
+
+    if (!validationError.isEmpty()) {
+      validationErrors.add(createErrorMessage(dlmsProfile, CAPTURE_OBJECTS_ERROR, validationError));
+    }
+  }
+
+  private static void allSourceObjectsShouldExist(
+      final DlmsProfile dlmsProfile, final List<String> validationErrors) {
+    final String validationError =
+        dlmsProfile.getObjects().stream()
+            .filter(object -> object.getClassId() == InterfaceClass.DATA.id())
+            .map(ObjectConfigService::getSourceObjectDefinitions)
+            .flatMap(Collection::stream)
+            .map(ObjectConfigService::getCosemObjectTypeFromCaptureObjectDefinition)
+            .map(tag -> objectShouldExist(dlmsProfile, tag))
+            .filter(error -> !error.isEmpty())
+            .collect(Collectors.joining(", "));
+
+    if (!validationError.isEmpty()) {
+      validationErrors.add(createErrorMessage(dlmsProfile, SOURCE_OBJECTS_ERROR, validationError));
+    }
+  }
+
+  private static String objectShouldExist(
+      final DlmsProfile dlmsProfile, final DlmsObjectType type) {
+    if (!dlmsProfile.getObjectMap().containsKey(type)) {
+      return "Profile doesn't contain object for " + type.name();
+    }
+
+    return "";
+  }
+
+  private static String createErrorMessage(
+      final DlmsProfile dlmsProfile, final String validationType, final String validationError) {
+    return "DlmsProfile " + dlmsProfile.getProfileWithVersion() + validationType + validationError;
   }
 }
