@@ -1,13 +1,12 @@
-/*
- * Copyright 2019 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.periodicmeterreads;
 
+import static java.lang.Math.abs;
+import static java.lang.Math.pow;
+import static java.util.Map.entry;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfileStatusCodeFlagDto.CLOCK_ADJUSTED;
 import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfileStatusCodeFlagDto.CLOCK_INVALID;
@@ -18,18 +17,24 @@ import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfil
 import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfileStatusCodeFlagDto.POWER_DOWN;
 import static org.opensmartgridplatform.dto.valueobjects.smartmetering.AmrProfileStatusCodeFlagDto.RECOVERED_VALUE;
 
+import java.io.IOException;
+import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.List;
+import java.util.Map;
 import java.util.TimeZone;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.joda.time.DateTimeZone;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.openmuc.jdlms.AttributeAddress;
 import org.openmuc.jdlms.ObisCode;
@@ -37,7 +42,6 @@ import org.openmuc.jdlms.SelectiveAccessDescription;
 import org.openmuc.jdlms.datatypes.CosemDateTime;
 import org.openmuc.jdlms.datatypes.DataObject;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.DlmsObjectConfigConfiguration;
-import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.dlmsobjectconfig.DlmsObjectConfigService;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.stub.DlmsConnectionManagerStub;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.stub.DlmsConnectionStub;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.testutil.AttributeAddressAssert;
@@ -46,7 +50,11 @@ import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.utils.Dlm
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.commands.utils.DlmsHelper;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.entities.DlmsDevice;
 import org.opensmartgridplatform.adapter.protocol.dlms.domain.entities.Protocol;
+import org.opensmartgridplatform.adapter.protocol.dlms.domain.valueobjects.CombinedDeviceModelCode.CombinedDeviceModelCodeBuilder;
+import org.opensmartgridplatform.dlms.exceptions.ObjectConfigException;
+import org.opensmartgridplatform.dlms.services.ObjectConfigService;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.ChannelDto;
+import org.opensmartgridplatform.dto.valueobjects.smartmetering.DlmsUnitTypeDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.PeriodTypeDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.PeriodicMeterReadGasResponseDto;
 import org.opensmartgridplatform.dto.valueobjects.smartmetering.PeriodicMeterReadsGasResponseItemDto;
@@ -60,23 +68,22 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
 
   private DlmsHelper dlmsHelper;
   private AmrProfileStatusCodeHelper amrProfileStatusCodeHelper;
-  private DlmsObjectConfigService dlmsObjectConfigService;
+  private ObjectConfigService objectConfigService;
 
   private DlmsConnectionManagerStub connectionManagerStub;
   private DlmsConnectionStub connectionStub;
 
   private final ObisCode OBIS_DAILY_DSMR4 = new ObisCode("1.0.99.2.0.255");
-  private final ObisCode OBIS_INTERVAL_DSMR4 = new ObisCode("0.1.24.3.0.255");
   private final ObisCode OBIS_MONTHLY_DSMR4 = new ObisCode("0.0.98.1.0.255");
+  private final String OBIS_INTERVAL_DSMR4 = "0.<c>.24.3.0.255";
 
-  private final ObisCode OBIS_DAILY_SMR5 = new ObisCode("0.1.24.3.1.255");
-  private final ObisCode OBIS_INTERVAL_SMR5 = new ObisCode("0.1.24.3.0.255");
-  private final ObisCode OBIS_MONTHLY_SMR5 = new ObisCode("0.1.24.3.2.255");
+  private final String OBIS_DAILY_SMR5 = "0.<c>.24.3.1.255";
+  private final String OBIS_INTERVAL_SMR5 = "0.<c>.24.3.0.255";
+  private final String OBIS_MONTHLY_SMR5 = "0.<c>.24.3.2.255";
 
   private final ObisCode OBIS_CLOCK = new ObisCode("0.0.1.0.0.255");
   private final ObisCode OBIS_STATUS = new ObisCode("0.0.96.10.2.255");
-  private final ObisCode OBIS_GAS_VALUE_DSMR4 = new ObisCode("0.1.24.2.1.255");
-  private final ObisCode OBIS_GAS_VALUE_SMR5 = new ObisCode("0.1.24.2.2.255");
+  private final String OBIS_GAS_VALUE_DSMR4 = "0.<c>.24.2.1.255";
 
   private final int CLASS_ID_CLOCK = 8;
   private final int CLASS_ID_DATA = 1;
@@ -86,7 +93,6 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   private final byte ATTR_ID_VALUE = 2;
   private final byte ATTR_ID_BUFFER = 2;
   private final byte ATTR_ID_CAPTURE_TIME = 5;
-  private final byte ATTR_ID_SCALER_UNIT = 3;
 
   private final DataObject CLOCK =
       DataObject.newStructureData(
@@ -101,22 +107,6 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
               DataObject.newUInteger16Data(this.CLASS_ID_DATA),
                   DataObject.newOctetStringData(this.OBIS_STATUS.bytes()),
               DataObject.newInteger8Data(this.ATTR_ID_VALUE), DataObject.newUInteger16Data(0)));
-
-  private final DataObject GAS_VALUE_DSMR4 =
-      DataObject.newStructureData(
-          Arrays.asList(
-              DataObject.newUInteger16Data(this.CLASS_ID_EXTENDED_REGISTER),
-              DataObject.newOctetStringData(this.OBIS_GAS_VALUE_DSMR4.bytes()),
-              DataObject.newInteger8Data(this.ATTR_ID_VALUE),
-              DataObject.newUInteger16Data(0)));
-
-  private final DataObject GAS_CAPTURE_TIME_DSMR4 =
-      DataObject.newStructureData(
-          Arrays.asList(
-              DataObject.newUInteger16Data(this.CLASS_ID_EXTENDED_REGISTER),
-              DataObject.newOctetStringData(this.OBIS_GAS_VALUE_DSMR4.bytes()),
-              DataObject.newInteger8Data(this.ATTR_ID_CAPTURE_TIME),
-              DataObject.newUInteger16Data(0)));
 
   private Date TIME_FROM;
   private Date TIME_TO;
@@ -134,11 +124,26 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   private final long PERIOD_1_LONG_VALUE = 1000L;
   private final long PERIOD_2_LONG_VALUE = 1500L;
 
+  private final BigDecimal SCALER = BigDecimal.valueOf(1000);
+
+  private final long PERIOD_1_LONG_VALUE_E = 33L;
+  private final long PERIOD_2_LONG_VALUE_E = 44L;
+
   private final short PERIOD1_AMR_STATUS_VALUE = 0x0F; // First 4 status bits set
   private final short PERIOD2_AMR_STATUS_VALUE = 0xF0; // Last 4 status bits set
 
+  private final List<Protocol> protocolsNoStatusMonthlyValues =
+      List.of(Protocol.DSMR_2_2, Protocol.DSMR_4_2_2, Protocol.SMR_4_3);
+
+  private static final List<Integer> ALL_CHANNELS = List.of(1, 2, 3, 4);
+
+  private static final List<String> GMETER_TYPES = List.of("G4", "G6", "G10", "G16", "G25");
+  private static final Map<String, Integer> SCALERS_FOR_METER_TYPES =
+      Map.ofEntries(
+          entry("G4", -3), entry("G6", -3), entry("G10", -2), entry("G16", -2), entry("G25", -2));
+
   @BeforeEach
-  public void setUp() {
+  public void setUp() throws IOException, ObjectConfigException {
 
     final TimeZone defaultTimeZone = TimeZone.getDefault();
     final DateTimeZone defaultDateTimeZone = DateTimeZone.getDefault();
@@ -153,13 +158,11 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     this.amrProfileStatusCodeHelper = new AmrProfileStatusCodeHelper();
     final DlmsObjectConfigConfiguration dlmsObjectConfigConfiguration =
         new DlmsObjectConfigConfiguration();
-    this.dlmsObjectConfigService =
-        new DlmsObjectConfigService(
-            this.dlmsHelper, dlmsObjectConfigConfiguration.getDlmsObjectConfigs());
+    this.objectConfigService = new ObjectConfigService();
 
     this.executor =
         new GetPeriodicMeterReadsGasCommandExecutor(
-            this.dlmsHelper, this.amrProfileStatusCodeHelper, this.dlmsObjectConfigService);
+            this.dlmsHelper, this.amrProfileStatusCodeHelper, this.objectConfigService);
     this.connectionStub = new DlmsConnectionStub();
     this.connectionManagerStub = new DlmsConnectionManagerStub(this.connectionStub);
 
@@ -186,69 +189,112 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
         new GregorianCalendar(2019, Calendar.FEBRUARY, 1, 0, 0).getTime();
   }
 
-  @Test
-  void testExecuteDsmr4() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.DSMR_4_2_2, type, false);
-    }
+  private static Stream<Arguments> combinationsDsmr() {
+    final List<Protocol> dsmrProtocols =
+        Arrays.stream(Protocol.values())
+            .filter(protocol -> protocol.isDsmr4() || protocol.isDsmr2())
+            .toList();
+
+    return generateCombinations(dsmrProtocols);
   }
 
-  @Test
-  void testExecuteSmr5_0() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_0_0, type, false);
-    }
+  private static Stream<Arguments> combinationsSmr5() {
+    final List<Protocol> smr5Protocols =
+        Arrays.stream(Protocol.values()).filter(Protocol::isSmr5).toList();
+
+    return generateCombinations(smr5Protocols);
   }
 
-  @Test
-  void testExecuteSmr5_0_WithNullData() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_0_0, type, true);
+  private static Stream<Arguments> generateCombinations(final List<Protocol> protocols) {
+    final List<Arguments> arguments = new ArrayList<>();
+
+    for (final Protocol protocol : protocols) {
+      for (final PeriodTypeDto periodType : PeriodTypeDto.values()) {
+        for (final int channel : ALL_CHANNELS) {
+          for (final String gMeterType : GMETER_TYPES) {
+            arguments.add(Arguments.of(protocol, periodType, channel, gMeterType));
+          }
+        }
+      }
     }
+
+    return arguments.stream();
   }
 
-  @Test
-  void testExecuteSmr5_1() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_1, type, false);
-    }
+  @ParameterizedTest
+  @MethodSource("combinationsDsmr")
+  void testExecuteDsmrNoSelectedValues(
+      final Protocol protocol, final PeriodTypeDto type, final int channel, final String gMeterType)
+      throws Exception {
+    this.testExecute(protocol, type, false, false, channel, gMeterType);
   }
 
-  @Test
-  void testExecuteSmr5_1_WithNullData() throws Exception {
-    for (final PeriodTypeDto type : PeriodTypeDto.values()) {
-      this.testExecute(Protocol.SMR_5_1, type, true);
-    }
+  @ParameterizedTest
+  @MethodSource("combinationsDsmr")
+  void testExecuteDsmr(
+      final Protocol protocol, final PeriodTypeDto type, final int channel, final String gMeterType)
+      throws Exception {
+    this.testExecute(protocol, type, false, true, channel, gMeterType);
+  }
+
+  @ParameterizedTest
+  @MethodSource("combinationsSmr5")
+  void testExecuteSmr5(
+      final Protocol protocol, final PeriodTypeDto type, final int channel, final String gMeterType)
+      throws Exception {
+    this.testExecute(protocol, type, false, true, channel, gMeterType);
+  }
+
+  @ParameterizedTest
+  @MethodSource("combinationsSmr5")
+  void testExecuteSmr5_WithNullData(
+      final Protocol protocol, final PeriodTypeDto type, final int channel, final String gMeterType)
+      throws Exception {
+    this.testExecute(protocol, type, true, true, channel, gMeterType);
   }
 
   private void testExecute(
-      final Protocol protocol, final PeriodTypeDto type, final boolean useNullData)
+      final Protocol protocol,
+      final PeriodTypeDto type,
+      final boolean useNullData,
+      final boolean selectedValuesSupported,
+      final int channel,
+      final String mbusDeviceModelCode)
       throws Exception {
 
     // SETUP
+    // set device model code in a comma seperated list per channel index 1-4 is channel 1-4 and
+    // index 0 is device model code of master device
+    final String combinedDeviceModelCodes =
+        new CombinedDeviceModelCodeBuilder()
+            .channelBasedDeviceModelCode(channel, mbusDeviceModelCode)
+            .build()
+            .toString();
+
     final MessageMetadata messageMetadata =
-        MessageMetadata.newBuilder().withCorrelationUid("123456").build();
+        MessageMetadata.newBuilder()
+            .withCorrelationUid("123456")
+            .withDeviceModelCode(combinedDeviceModelCodes)
+            .build();
 
     // Reset stub
     this.connectionStub.clearRequestedAttributeAddresses();
 
     // Create device with requested protocol version
-    final DlmsDevice device = this.createDlmsDevice(protocol);
+    final DlmsDevice device = this.createDlmsDevice(protocol, selectedValuesSupported);
 
     // Create request object
     final PeriodicMeterReadsRequestDto request =
         new PeriodicMeterReadsRequestDto(
-            type, this.TIME_FROM, this.TIME_TO, ChannelDto.fromNumber(1));
+            type, this.TIME_FROM, this.TIME_TO, ChannelDto.fromNumber(channel));
 
     // Get expected values
     final AttributeAddress expectedAddressProfile =
-        this.createAttributeAddress(protocol, type, this.TIME_FROM, this.TIME_TO, device);
-    final List<AttributeAddress> expectedScalerUnitAddresses =
-        this.getScalerUnitAttributeAddresses(protocol);
+        this.createAttributeAddress(protocol, type, this.TIME_FROM, this.TIME_TO, device, channel);
 
     // Set response in stub
-    this.setResponseForProfile(expectedAddressProfile, protocol, type, useNullData);
-    this.setResponsesForScalerUnit(expectedScalerUnitAddresses);
+    this.setResponseForProfile(
+        expectedAddressProfile, protocol, type, useNullData, selectedValuesSupported, channel);
 
     // CALL
     final PeriodicMeterReadGasResponseDto response =
@@ -259,28 +305,17 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     // Get resulting requests from connection stub
     final List<AttributeAddress> requestedAttributeAddresses =
         this.connectionStub.getRequestedAttributeAddresses();
-    assertThat(requestedAttributeAddresses).hasSize(2);
+    assertThat(requestedAttributeAddresses).hasSize(1);
 
     // There should be 1 request to the buffer (id = 2) of a profile
     // (class-id = 7)
     final AttributeAddress actualAttributeAddressProfile =
         requestedAttributeAddresses.stream()
             .filter(a -> a.getClassId() == this.CLASS_ID_PROFILE)
-            .collect(Collectors.toList())
+            .toList()
             .get(0);
 
     AttributeAddressAssert.is(actualAttributeAddressProfile, expectedAddressProfile);
-
-    // Check the amount of requests to the scaler_unit of the meter value in
-    // the extended register
-    final List<AttributeAddress> attributeAddressesScalerUnit =
-        requestedAttributeAddresses.stream()
-            .filter(
-                a ->
-                    a.getClassId() == this.CLASS_ID_EXTENDED_REGISTER
-                        && a.getId() == this.ATTR_ID_SCALER_UNIT)
-            .collect(Collectors.toList());
-    assertThat(attributeAddressesScalerUnit).hasSize(1);
 
     // Check response
     assertThat(response.getPeriodType()).isEqualTo(type);
@@ -290,14 +325,18 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     assertThat(periodicMeterReads).hasSize(AMOUNT_OF_PERIODS);
 
     this.checkClockValues(periodicMeterReads, type, useNullData);
-    this.checkValues(periodicMeterReads);
+    this.checkValues(
+        periodicMeterReads, channel, this.SCALERS_FOR_METER_TYPES.get(mbusDeviceModelCode));
     this.checkAmrStatus(periodicMeterReads, protocol, type);
   }
 
-  private DlmsDevice createDlmsDevice(final Protocol protocol) {
+  private DlmsDevice createDlmsDevice(
+      final Protocol protocol, final boolean selectiveAccessPeriodicMeterReadsSupported) {
     final DlmsDevice device = new DlmsDevice();
     device.setProtocol(protocol);
     device.setSelectiveAccessSupported(true);
+    device.setSelectiveAccessPeriodicMeterReadsSupported(
+        selectiveAccessPeriodicMeterReadsSupported);
     return device;
   }
 
@@ -306,7 +345,8 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
       final PeriodTypeDto type,
       final Date timeFrom,
       final Date timeTo,
-      final DlmsDevice device)
+      final DlmsDevice device,
+      final int channel)
       throws Exception {
     final DataObject from =
         this.dlmsHelper.asDataObject(
@@ -315,21 +355,23 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
         this.dlmsHelper.asDataObject(
             DlmsDateTimeConverter.toDateTime(timeTo, device.getTimezone()));
 
-    if (protocol == Protocol.DSMR_4_2_2) {
+    if (protocol.isDsmr2() || protocol.isDsmr4()) {
       if (type == PeriodTypeDto.DAILY) {
-        return this.createAttributeAddressDsmr4Daily(from, to);
+        return this.createAttributeAddressDsmr4Daily(
+            from, to, device.isSelectiveAccessPeriodicMeterReadsSupported(), channel, protocol);
       } else if (type == PeriodTypeDto.MONTHLY) {
-        return this.createAttributeAddressDsmr4Monthly(from, to);
+        return this.createAttributeAddressDsmr4Monthly(
+            from, to, device.isSelectiveAccessPeriodicMeterReadsSupported(), channel, protocol);
       } else if (type == PeriodTypeDto.INTERVAL) {
-        return this.createAttributeAddressDsmr4Interval(from, to);
+        return this.createAttributeAddressDsmr4Interval(from, to, channel);
       }
-    } else if (protocol == Protocol.SMR_5_0_0 || protocol == Protocol.SMR_5_1) {
+    } else if (protocol.isSmr5()) {
       if (type == PeriodTypeDto.DAILY) {
-        return this.createAttributeAddressSmr5Daily(from, to);
+        return this.createAttributeAddressSmr5Daily(from, to, channel);
       } else if (type == PeriodTypeDto.MONTHLY) {
-        return this.createAttributeAddressSmr5Monthly(from, to);
+        return this.createAttributeAddressSmr5Monthly(from, to, channel);
       } else if (type == PeriodTypeDto.INTERVAL) {
-        return this.createAttributeAddressSmr5Interval(from, to);
+        return this.createAttributeAddressSmr5Interval(from, to, channel);
       }
     }
 
@@ -340,52 +382,29 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
             + protocol.getVersion());
   }
 
-  private List<AttributeAddress> getScalerUnitAttributeAddresses(final Protocol protocol) {
-
-    final AttributeAddress attributeAddress;
-
-    if (protocol == Protocol.DSMR_4_2_2) {
-      attributeAddress =
-          new AttributeAddress(
-              this.CLASS_ID_EXTENDED_REGISTER,
-              this.OBIS_GAS_VALUE_DSMR4,
-              this.ATTR_ID_SCALER_UNIT,
-              null);
-    } else {
-      attributeAddress =
-          new AttributeAddress(
-              this.CLASS_ID_EXTENDED_REGISTER,
-              this.OBIS_GAS_VALUE_SMR5,
-              this.ATTR_ID_SCALER_UNIT,
-              null);
-    }
-
-    return Collections.singletonList(attributeAddress);
-  }
-
   private void setResponseForProfile(
       final AttributeAddress attributeAddressForProfile,
       final Protocol protocol,
       final PeriodTypeDto type,
-      final boolean useNullData) {
+      final boolean useNullData,
+      final boolean selectedValuesSupported,
+      final int channel) {
 
     // PERIOD 1
 
-    final DataObject period1Clock = this.PERIOD_1_CLOCK;
-    final DataObject period1Status = DataObject.newUInteger8Data(this.PERIOD1_AMR_STATUS_VALUE);
-    final DataObject period1Value = DataObject.newUInteger32Data(this.PERIOD_1_LONG_VALUE);
     final DataObject period1CaptureTime = DataObject.newDateTimeData(this.PERIOD_1_CAPTURE_TIME);
 
-    final DataObject periodItem1;
-    if (type == PeriodTypeDto.MONTHLY && protocol == Protocol.DSMR_4_2_2) {
-      periodItem1 =
-          DataObject.newStructureData(
-              Arrays.asList(period1Clock, period1Value, period1CaptureTime));
-    } else {
-      periodItem1 =
-          DataObject.newStructureData(
-              Arrays.asList(period1Clock, period1Status, period1Value, period1CaptureTime));
-    }
+    final DataObject periodItem1 =
+        this.createPeriodItem(
+            type,
+            protocol,
+            selectedValuesSupported,
+            channel,
+            this.PERIOD_1_CLOCK,
+            this.PERIOD1_AMR_STATUS_VALUE,
+            this.PERIOD_1_LONG_VALUE_E,
+            this.PERIOD_1_LONG_VALUE,
+            period1CaptureTime);
 
     // PERIOD 2
 
@@ -398,20 +417,18 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
       period2Clock = this.PERIOD_2_CLOCK;
       period2CaptureTime = DataObject.newDateTimeData(this.PERIOD_2_CAPTURE_TIME);
     }
-    final DataObject period2Status = DataObject.newUInteger8Data(this.PERIOD2_AMR_STATUS_VALUE);
-    final DataObject period2Value = DataObject.newUInteger32Data(this.PERIOD_2_LONG_VALUE);
 
-    final DataObject periodItem2;
-    if (type == PeriodTypeDto.MONTHLY && protocol == Protocol.DSMR_4_2_2) {
-      // No status for Monthly values in DSMR4.2.2
-      periodItem2 =
-          DataObject.newStructureData(
-              Arrays.asList(period2Clock, period2Value, period2CaptureTime));
-    } else {
-      periodItem2 =
-          DataObject.newStructureData(
-              Arrays.asList(period2Clock, period2Status, period2Value, period2CaptureTime));
-    }
+    final DataObject periodItem2 =
+        this.createPeriodItem(
+            type,
+            protocol,
+            selectedValuesSupported,
+            channel,
+            period2Clock,
+            this.PERIOD2_AMR_STATUS_VALUE,
+            this.PERIOD_2_LONG_VALUE_E,
+            this.PERIOD_2_LONG_VALUE,
+            period2CaptureTime);
 
     // Create returnvalue and set in stub
     final DataObject responseDataObject =
@@ -419,16 +436,72 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     this.connectionStub.addReturnValue(attributeAddressForProfile, responseDataObject);
   }
 
-  private void setResponsesForScalerUnit(
-      final List<AttributeAddress> attributeAddressesForScalerUnit) {
-    final int DLMS_ENUM_VALUE_M3 = 14;
-    final DataObject responseDataObject =
-        DataObject.newStructureData(
-            DataObject.newInteger8Data((byte) 0), DataObject.newEnumerateData(DLMS_ENUM_VALUE_M3));
+  private DataObject createPeriodItem(
+      final PeriodTypeDto type,
+      final Protocol protocol,
+      final boolean selectedValuesSupported,
+      final int channel,
+      final DataObject clock,
+      final short statusValue,
+      final long longValueE,
+      final long longValueG,
+      final DataObject captureTime) {
+    final DataObject periodStatus = DataObject.newUInteger8Data(statusValue);
+    final DataObject periodValueE = DataObject.newUInteger32Data(longValueE);
 
-    for (final AttributeAddress attributeAddress : attributeAddressesForScalerUnit) {
-      this.connectionStub.addReturnValue(attributeAddress, responseDataObject);
+    final List<DataObject> items = new ArrayList<>();
+
+    // Overview protocols - periodtypes (Interval/Daily/Monthly) - selected values supported
+    //
+    //               DSMR2.2  DSMR4.2.2 / SMR4.3  SMR5.0-5.5
+    //                I D M          I D M          I D M
+    //
+    // Clock          1 1 1          1 1 1          1 1 1
+    // Status         1 1 0          1 1 0          1 1 1
+    // E values       0 0 0          0 0 0          0 0 0
+    // G values       1 1 1          1 1 1          1 1 1
+    // Capture time   0 0 0          1 1 1          1 1 1
+
+    // Overview protocols - periodtypes - selected values NOT supported
+    //
+    //               DSMR2.2  DSMR4.2.2 / SMR4.3
+    //                I D M          I D M
+    //
+    // Clock          1 1 1          1 1 1
+    // Status         1 1 0          1 1 0
+    // E values       4 4 4          4 4 4
+    // G values       4 4 4          4 4 4
+    // Capture time   0 0 0          4 4 4
+
+    // Always add clock first
+    items.add(clock);
+
+    // Add status
+    if (type != PeriodTypeDto.MONTHLY || !this.protocolsNoStatusMonthlyValues.contains(protocol)) {
+      items.add(periodStatus);
     }
+
+    // Add E values (import rate 1 and 2, export rate 1 and 2)
+    if (!selectedValuesSupported && type != PeriodTypeDto.INTERVAL) {
+      items.addAll(List.of(periodValueE, periodValueE, periodValueE, periodValueE));
+    }
+
+    // Add G values and capture times
+    if (selectedValuesSupported || type == PeriodTypeDto.INTERVAL) {
+      items.add(this.createValue(longValueG, channel));
+      if (protocol != Protocol.DSMR_2_2) {
+        items.add(captureTime);
+      }
+    } else {
+      for (final int c : this.ALL_CHANNELS) {
+        items.add(this.createValue(longValueG, c));
+        if (protocol != Protocol.DSMR_2_2) {
+          items.add(captureTime);
+        }
+      }
+    }
+
+    return DataObject.newStructureData(items);
   }
 
   private DataObject getDateAsOctetString(final int year, final int month, final int day) {
@@ -465,13 +538,22 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     }
   }
 
-  private void checkValues(final List<PeriodicMeterReadsGasResponseItemDto> periodicMeterReads) {
+  private void checkValues(
+      final List<PeriodicMeterReadsGasResponseItemDto> periodicMeterReads,
+      final int channel,
+      final int scaler) {
 
     final PeriodicMeterReadsGasResponseItemDto period1 = periodicMeterReads.get(0);
     final PeriodicMeterReadsGasResponseItemDto period2 = periodicMeterReads.get(1);
+    final BigDecimal multiplier = BigDecimal.valueOf(pow(10, abs(scaler)));
 
-    assertThat(period1.getConsumption().getValue().longValue()).isEqualTo(this.PERIOD_1_LONG_VALUE);
-    assertThat(period2.getConsumption().getValue().longValue()).isEqualTo(this.PERIOD_2_LONG_VALUE);
+    assertThat(period1.getConsumption().getValue().multiply(multiplier).intValue())
+        .isEqualTo(this.PERIOD_1_LONG_VALUE + channel);
+    assertThat(period1.getConsumption().getDlmsUnit()).isEqualTo(DlmsUnitTypeDto.M3);
+
+    assertThat(period2.getConsumption().getValue().multiply(multiplier).intValue())
+        .isEqualTo(this.PERIOD_2_LONG_VALUE + channel);
+    assertThat(period2.getConsumption().getDlmsUnit()).isEqualTo(DlmsUnitTypeDto.M3);
   }
 
   private void checkAmrStatus(
@@ -482,7 +564,7 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
     final PeriodicMeterReadsGasResponseItemDto period1 = periodicMeterReads.get(0);
     final PeriodicMeterReadsGasResponseItemDto period2 = periodicMeterReads.get(1);
 
-    if (protocol == Protocol.DSMR_4_2_2 && type == PeriodTypeDto.MONTHLY) {
+    if (type == PeriodTypeDto.MONTHLY && this.protocolsNoStatusMonthlyValues.contains(protocol)) {
       assertThat(period1.getAmrProfileStatusCode()).isNull();
       assertThat(period2.getAmrProfileStatusCode()).isNull();
     } else {
@@ -496,20 +578,45 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   // DSMR4
 
   private AttributeAddress createAttributeAddressDsmr4Daily(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectedValuesSupported,
+      final int channel,
+      final Protocol protocol) {
     final SelectiveAccessDescription expectedSelectiveAccess =
-        this.createSelectiveAccessDescriptionDsmr4Daily(from, to);
+        this.createSelectiveAccessDescriptionDsmr4Daily(
+            from, to, selectedValuesSupported, channel, protocol);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE, this.OBIS_DAILY_DSMR4, this.ATTR_ID_BUFFER, expectedSelectiveAccess);
   }
 
   private SelectiveAccessDescription createSelectiveAccessDescriptionDsmr4Daily(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectedValuesSupported,
+      final int channel,
+      final Protocol protocol) {
 
-    final DataObject selectedValues =
-        DataObject.newArrayData(
-            Arrays.asList(
-                this.CLOCK, this.STATUS, this.GAS_VALUE_DSMR4, this.GAS_CAPTURE_TIME_DSMR4));
+    final List<DataObject> dataObjects;
+
+    if (!selectedValuesSupported) {
+      dataObjects = new ArrayList<>();
+    } else if (protocol == Protocol.DSMR_2_2) {
+      dataObjects =
+          Arrays.asList(
+              this.CLOCK,
+              this.STATUS,
+              this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_VALUE));
+    } else {
+      dataObjects =
+          Arrays.asList(
+              this.CLOCK,
+              this.STATUS,
+              this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_VALUE),
+              this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_CAPTURE_TIME));
+    }
+
+    final DataObject selectedValues = DataObject.newArrayData(dataObjects);
 
     final DataObject expectedAccessParam =
         DataObject.newStructureData(Arrays.asList(this.CLOCK, from, to, selectedValues));
@@ -518,9 +625,14 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   }
 
   private AttributeAddress createAttributeAddressDsmr4Monthly(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectiveAccessPeriodicMeterReadsSupported,
+      final int channel,
+      final Protocol protocol) {
     final SelectiveAccessDescription expectedSelectiveAccess =
-        this.createSelectiveAccessDescriptionDsmr4Monthly(from, to);
+        this.createSelectiveAccessDescriptionDsmr4Monthly(
+            from, to, selectiveAccessPeriodicMeterReadsSupported, channel, protocol);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
         this.OBIS_MONTHLY_DSMR4,
@@ -529,11 +641,29 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   }
 
   private SelectiveAccessDescription createSelectiveAccessDescriptionDsmr4Monthly(
-      final DataObject from, final DataObject to) {
+      final DataObject from,
+      final DataObject to,
+      final boolean selectedValuesSupported,
+      final int channel,
+      final Protocol protocol) {
 
-    final DataObject selectedValues =
-        DataObject.newArrayData(
-            Arrays.asList(this.CLOCK, this.GAS_VALUE_DSMR4, this.GAS_CAPTURE_TIME_DSMR4));
+    final List<DataObject> dataObjects;
+
+    if (!selectedValuesSupported) {
+      dataObjects = new ArrayList<>();
+    } else if (protocol == Protocol.DSMR_2_2) {
+      dataObjects =
+          Arrays.asList(
+              this.CLOCK, this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_VALUE));
+    } else {
+      dataObjects =
+          Arrays.asList(
+              this.CLOCK,
+              this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_VALUE),
+              this.getDataObjectForGasValueDsmr4(channel, this.ATTR_ID_CAPTURE_TIME));
+    }
+
+    final DataObject selectedValues = DataObject.newArrayData(dataObjects);
 
     final DataObject expectedAccessParam =
         DataObject.newStructureData(Arrays.asList(this.CLOCK, from, to, selectedValues));
@@ -542,12 +672,12 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   }
 
   private AttributeAddress createAttributeAddressDsmr4Interval(
-      final DataObject from, final DataObject to) {
+      final DataObject from, final DataObject to, final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
         this.createSelectiveAccessDescriptionDsmr4Interval(from, to);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
-        this.OBIS_INTERVAL_DSMR4,
+        this.getObisCodeForChannel(this.OBIS_INTERVAL_DSMR4, channel),
         this.ATTR_ID_BUFFER,
         expectedSelectiveAccess);
   }
@@ -566,31 +696,34 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
   // SMR5
 
   private AttributeAddress createAttributeAddressSmr5Daily(
-      final DataObject from, final DataObject to) {
-    final SelectiveAccessDescription expectedSelectiveAccess =
-        this.createSelectiveAccessDescriptionSmr5(from, to);
-    return new AttributeAddress(
-        this.CLASS_ID_PROFILE, this.OBIS_DAILY_SMR5, this.ATTR_ID_BUFFER, expectedSelectiveAccess);
-  }
-
-  private AttributeAddress createAttributeAddressSmr5Monthly(
-      final DataObject from, final DataObject to) {
+      final DataObject from, final DataObject to, final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
         this.createSelectiveAccessDescriptionSmr5(from, to);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
-        this.OBIS_MONTHLY_SMR5,
+        this.getObisCodeForChannel(this.OBIS_DAILY_SMR5, channel),
+        this.ATTR_ID_BUFFER,
+        expectedSelectiveAccess);
+  }
+
+  private AttributeAddress createAttributeAddressSmr5Monthly(
+      final DataObject from, final DataObject to, final int channel) {
+    final SelectiveAccessDescription expectedSelectiveAccess =
+        this.createSelectiveAccessDescriptionSmr5(from, to);
+    return new AttributeAddress(
+        this.CLASS_ID_PROFILE,
+        this.getObisCodeForChannel(this.OBIS_MONTHLY_SMR5, channel),
         this.ATTR_ID_BUFFER,
         expectedSelectiveAccess);
   }
 
   private AttributeAddress createAttributeAddressSmr5Interval(
-      final DataObject from, final DataObject to) {
+      final DataObject from, final DataObject to, final int channel) {
     final SelectiveAccessDescription expectedSelectiveAccess =
         this.createSelectiveAccessDescriptionSmr5(from, to);
     return new AttributeAddress(
         this.CLASS_ID_PROFILE,
-        this.OBIS_INTERVAL_SMR5,
+        this.getObisCodeForChannel(this.OBIS_INTERVAL_SMR5, channel),
         this.ATTR_ID_BUFFER,
         expectedSelectiveAccess);
   }
@@ -604,5 +737,24 @@ class GetPeriodicMeterReadsGasCommandExecutorIntegrationTest {
         DataObject.newStructureData(Arrays.asList(this.CLOCK, from, to, selectedValues));
 
     return new SelectiveAccessDescription(1, expectedAccessParam);
+  }
+
+  private ObisCode getObisCodeForChannel(final String obis, final int channel) {
+    return new ObisCode(obis.replace("<c>", String.valueOf(channel)));
+  }
+
+  private DataObject getDataObjectForGasValueDsmr4(final int channel, final byte attributeId) {
+    return DataObject.newStructureData(
+        Arrays.asList(
+            DataObject.newUInteger16Data(this.CLASS_ID_EXTENDED_REGISTER),
+            DataObject.newOctetStringData(
+                this.getObisCodeForChannel(this.OBIS_GAS_VALUE_DSMR4, channel).bytes()),
+            DataObject.newInteger8Data(attributeId),
+            DataObject.newUInteger16Data(0)));
+  }
+
+  private DataObject createValue(final long value, final int channel) {
+    // Add channel to value to make each value different
+    return DataObject.newUInteger32Data(value + channel);
   }
 }
