@@ -1,11 +1,7 @@
-/*
- * Copyright 2019 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.protocol.iec60870.integrationtests.steps;
 
 import static org.mockito.ArgumentMatchers.anyString;
@@ -19,7 +15,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.adapter.protocol.iec60870.domain.entities.Iec60870Device;
 import org.opensmartgridplatform.adapter.protocol.iec60870.domain.repositories.Iec60870DeviceRepository;
 import org.opensmartgridplatform.adapter.protocol.iec60870.domain.valueobjects.DeviceType;
@@ -62,15 +57,13 @@ public class Iec60870DeviceSteps {
       final String gatewayDeviceIdentification, final List<Iec60870Device> devices) {
     return devices.stream()
         .filter(d -> gatewayDeviceIdentification.equals(d.getGatewayDeviceIdentification()))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Given("IEC60870 devices")
   public void givenIec60870Devices(final DataTable devicesTable) {
     this.devicesAreKnownInTheRepository(
-        devicesTable.asMaps().stream()
-            .map(Iec60870DeviceFactory::fromSettings)
-            .collect(Collectors.toList()));
+        devicesTable.asMaps().stream().map(Iec60870DeviceFactory::fromSettings).toList());
   }
 
   @Given("a light sensor")
