@@ -1,14 +1,9 @@
-/*
- * Copyright 2019 Smart Society Services B.V.
- *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
- * except in compliance with the License. You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- */
+// SPDX-FileCopyrightText: Copyright Contributors to the GXF project
+//
+// SPDX-License-Identifier: Apache-2.0
+
 package org.opensmartgridplatform.adapter.protocol.iec60870.integrationtests.steps;
 
-import static java.util.stream.Collectors.toList;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.Mockito.times;
@@ -66,7 +61,7 @@ public class OsgpCoreResponseSteps {
     LOGGER.debug("Then I should send get status response messages to osgp core");
 
     final List<ProtocolResponseMessage> responseMessages =
-        dataTable.asMaps().stream().map(this::protocolResponseMessage).collect(toList());
+        dataTable.asMaps().stream().map(this::protocolResponseMessage).toList();
 
     this.verifyNumberOfResponseMessages(responseMessages.size());
     this.verifyResponseMessages(responseMessages);
